@@ -58,10 +58,10 @@
 		</SPAN>
 
 		<!-- Readins -->
-		<SPAN TYPE="LITERAL1" DELEGATE="LITERAL">
-			<BEGIN>&lt;&lt;EOF</BEGIN>
-			<END>EOF</END>
-		</SPAN>
+		<SPAN_REGEXP HASH_CHAR="<" TYPE="LITERAL1" DELEGATE="LITERAL">
+			<BEGIN><![CDATA[<<[[:space:]'"]*([[:alnum:]_]+)[[:space:]'"]*]]></BEGIN>
+			<END>$1</END>
+		</SPAN_REGEXP>
 
 		<!-- Operators -->
 		<SEQ TYPE="OPERATOR">|</SEQ>
